# tmuxion

./: Cargo.toml  LICENSE  rust-toolchain.toml
src/: args.rs  config.rs  consts.rs  deserializers.rs  main.rs
src/command/: copy_config.rs  create.rs  last.rs  mod.rs
src/command/select/: input.rs  mod.rs  state.rs  ui.rs
src/config/: config.default.lua  config.default.yaml  mod.rs
src/tmux/: mod.rs  pane.rs  session.rs  window.rs
src/util/: mod.rs  path_display_pretty.rs
