# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "tmuxion"
version = "0.1.0"
description = "An opinionated tmux session manager"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.30", features = ["derive", "env", "string"] }
fuzzy-matcher = "0.3.7"
mlua = { version = "0.10.3", features = [
  "lua54",
  "macros",
  "send",
  "serialize",
  "vendored",
] }
once_cell = "1.20.3"
ratatui = "0.29.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tmux_interface = { version = "0.3.2", default-features = false, features = [
  "tmux_stable",
] }
unicode-segmentation = "1.12.0"

[lints.rust]
nonstandard_style = { level = "deny", priority = -1 }
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
similar_names = "allow"
unwrap_used = "warn"
