# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "tmuxion"
version = "0.1.0"
description = "An opinionated tmux session manager"
edition = "2024"
publish = false

[dependencies]
ahash = "0.8.11"
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive", "env", "string"] }
frizbee = "0.3.0"
mlua = { version = "0.10.3", features = [
  "lua54",
  "macros",
  "send",
  "serialize",
  "vendored",
] }
ratatui = "0.30.0-alpha.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tmux_interface = { version = "0.3.2", default-features = false, features = [
  "tmux_stable",
] }
unicode-segmentation = "1.12.0"

[lints.rust]
nonstandard_style = { level = "deny", priority = -1 }
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
similar_names = "allow"
unwrap_used = "warn"
