# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "tmuxion"
version = "0.1.0"
description = "An opinionated tmux session manager"
edition = "2024"
publish = false

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive", "env", "string"] }
dirs = "6.0.0"
frizbee = "0.3.0"
mlua = { version = "0.11.5", features = [
  "lua54",
  "macros",
  "send",
  "serialize",
  "vendored",
] }
ratatui = "0.30.0-alpha.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tmux_interface = { version = "0.3.2", default-features = false, features = [
  "tmux_stable",
] }
unicode-segmentation = "1.12.0"

[lints.rust]
nonstandard_style = { level = "deny", priority = -1 }
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
similar_names = "allow"
unused_trait_names = "warn"
unwrap_used = "warn"
